RESOLVED FIXED239343
ScriptDisallowedScope::isEventAllowedInMainThread assert failure when activating AudioSession
https://bugs.webkit.org/show_bug.cgi?id=239343
Summary ScriptDisallowedScope::isEventAllowedInMainThread assert failure when activat...
Gabriel Nava Marino
Reported 2022-04-14 09:28:56 PDT
...
Attachments
Patch (2.26 KB, patch)
2022-04-14 09:31 PDT, Gabriel Nava Marino
no flags
Patch for landing (2.26 KB, patch)
2022-04-14 09:33 PDT, Gabriel Nava Marino
no flags
Gabriel Nava Marino
Comment 1 2022-04-14 09:31:12 PDT
Gabriel Nava Marino
Comment 2 2022-04-14 09:33:14 PDT
Created attachment 457637 [details] Patch for landing
EWS
Comment 3 2022-04-14 10:47:43 PDT
Committed r292878 (249648@main): <https://commits.webkit.org/249648@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457637 [details].
Radar WebKit Bug Importer
Comment 4 2022-04-14 10:48:14 PDT
Note You need to log in before you can comment on or make changes to this bug.